--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="row">
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="..." alt="...">
+      <img src="https://www.petmd.com/sites/default/files/what-does-it-mean-when-cat-wags-tail.jpg">
     </a>
   </div>
   ...
