--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="jumbotron">
-  <h1>Hello, world!</h1>
+  <h1>Hi, I'm Teddy Davidson!</h1>
   <p>...</p>
   <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 </div>
