--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <br><br>
     <div class="row">
   <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
+    <a href="aboutme.html" class="thumbnail">
       <img src="https://www.petmd.com/sites/default/files/what-does-it-mean-when-cat-wags-tail.jpg">
     </a>
   </div>
