--- a/aboutme.html
+++ b/aboutme.html
@@ -17,9 +17,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
-  <div class="page-header">
-  <h1>Example page header <small>Subtext for header</small></h1>
+  <body><br><br>
+  <div class="Who Am I?">
+  <h1>Example page header <small>My Interests, My Dreams...</small></h1>
 </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
