--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="jumbotron">
   <h1>Hi, I'm Teddy Davidson!</h1>
-  <p>...</p>
+  <p>Applying for the class of 2022!</p>
   <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 </div>
     <br><br>
