--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>About Me</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -18,8 +18,8 @@
     <![endif]-->
   </head>
   <body><br><br>
-  <div class="Who Am I?">
-  <h1>Example page header <small>My Interests, My Dreams...</small></h1>
+  <div class="page-header">
+  <h1>Who Am I? <small>My Interests, My Dreams...</small></h1>
 </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
