--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="row">
   <div class="col-xs-6 col-md-3">
     <a href="aboutme.html" class="thumbnail">
-      <img src="https://www.petmd.com/sites/default/files/what-does-it-mean-when-cat-wags-tail.jpg">
+      <img src="https://www.petmd.com/sites/default/files/what-does-it-mean-when-cat-wags-tail.jpg" width="171" height="180">
     </a>
   </div>
   ...
