--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
   <h1>Hi, I'm Teddy Davidson!</h1>
   <p>Applying for the class of 2022!</p>
 </div>
-    <div class="row">
+  
   <div class="col-xs-6 col-md-3">
     <a href="aboutme.html" class="thumbnail">
       <img src="https://i.imgur.com/Y8aq3ac.jpg" width="350" height="400">
+    </a>
+  </div>
+    <div class="row">
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="..." alt="...">
     </a>
   </div>
 </div>
