--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <img src="https://i.imgur.com/Y8aq3ac.jpg" width="350" height="400">
     </a>
   <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
+    <a href="https://imgur.com/M7xpraL" class="thumbnail">
       <img src="..." alt="...">
     </a>
   </div>
