--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </a>
   <div class="col-xs-6 col-md-3">
     <a href="myprojects.html" class="thumbnail">
-      <img src="https://imgur.com/M7xpraL">
+      <img src="https://imgur.com/M7xpraL.jpg">
     </a>
   </div>
 </div>
