--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
   <h1>Hi, I'm Teddy Davidson!</h1>
   <p>Applying for the class of 2022!</p>
 </div>
-    <div class="row">
-  <div class="col-xs-6 col-md-3">
+    <div align="center"><table cellpadding="0" width="400" cellspacing="0"><tr><td>
+
     <a href="aboutme.html" class="thumbnail">
       <img src="https://i.imgur.com/Y8aq3ac.jpg" width="350" height="400">
-    </a>
+    </a></td><td>
     <a href="myprojects.html" class="thumbnail">
       <img src="https://imgur.com/M7xpraL.jpg">
-    </a>
+      </a></td>
+      </table>
   </div>
 </div>
 
