--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     </a></td><td>
     <a href="myprojects.html" class="thumbnail">
       <img src="https://imgur.com/M7xpraL.jpg">
+      </a></td><td>
+        <a href="thiswebstie.html class="thumbnail">
+      <img src="https://imgur.com/9UPglrQ.jpg">
       </a></td></tr>
       </table>
   </div>
