--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="myprojects.html" class="thumbnail">
       <img src="https://imgur.com/M7xpraL.jpg">
       </a></td><td>
-        <a href="thiswebstie.html class="thumbnail">
+        <a href="thiswebstie.html" class="thumbnail">
       <img src="https://imgur.com/9UPglrQ.jpg">
       </a></td></tr>
       </table>
