--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     </a></td><td>
     <a href="myprojects.html" class="thumbnail">
       <img src="https://imgur.com/M7xpraL.jpg">
+      <div class="caption">
+        <h3>Thumbnail label</h3>
+        <p></p>
+        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
       </a></td><td>
         <a href="thiswebstie.html" class="thumbnail">
       <img src="https://imgur.com/9UPglrQ.jpg">
