--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
     <a href="myprojects.html" class="thumbnail">
       <img src="https://imgur.com/M7xpraL.jpg">
       <div class="caption">
-        <h3>Thumbnail label</h3>
+       Learn about the several construction projects I have worked on during my high school career!
         <p></p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
       </a></td><td>
         <a href="thiswebstie.html" class="thumbnail">
       <img src="https://imgur.com/9UPglrQ.jpg">
