--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
     <a href="aboutme.html" class="thumbnail">
       <img src="https://i.imgur.com/Y8aq3ac.jpg" width="350" height="400">
+       <div class="caption">
+       Learn about the several construction projects I have worked on during my high school career!
+        <p></p>
     </a></td><td>
     <a href="myprojects.html" class="thumbnail">
       <img src="https://imgur.com/M7xpraL.jpg">
@@ -35,6 +38,9 @@
       </a></td><td>
         <a href="thiswebstie.html" class="thumbnail">
       <img src="https://imgur.com/9UPglrQ.jpg">
+           <div class="caption">
+       Learn about the several construction projects I have worked on during my high school career!
+        <p></p>
       </a></td></tr>
       </table>
   </div>
