--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
            <div class="caption">
        Learn about the several construction projects I have worked on during my high school career!
         <p></p>
+      </a></td>
+      <td>
+        <a href="mydesignskills.html" class="thumbnail">
+      <img src="https://imgur.com/wlxHBtE.jpg">
+           <div class="caption">
+       Learn about the several construction projects I have worked on during my high school career!
+        <p></p>
       </a></td></tr>
       </table>
   </div>
