--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
        Learn about the several construction projects I have worked on during my high school career!
         <p></p>
       </a></td><td>
-        <a href="thiswebstie.html" class="thumbnail">
+        <a href="thiswebsite.html" class="thumbnail">
       <img src="https://imgur.com/9UPglrQ.jpg">
            <div class="caption">
        Learn about the several construction projects I have worked on during my high school career!
