--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <h1>Hi, I'm Teddy Davidson!</h1>
   <p>Applying for the class of 2022!</p>
 </div>
-    <div align="center"><table cellpadding="0" width="400" cellspacing="0"><tr><td>
+    <div align="center"><table cellpadding="0" width="400" cellspacing="0" class="col-sm-6 col-md-4"><tr><td>
 
     <a href="aboutme.html" class="thumbnail">
       <img src="https://i.imgur.com/Y8aq3ac.jpg" width="350" height="400">
