--- a/index.html
+++ b/index.html
@@ -66,6 +66,33 @@ tr:nth-child(even) {
        Learn about the several construction projects I have worked on during my high school career!
         <p></p>
       </a></td></tr>
+      <tr><td>
+
+    <a href="aboutme.html" class="thumbnail">
+      <img src="https://i.imgur.com/Y8aq3ac.jpg" width="350" height="400">
+       <div class="caption">
+       Learn about the several construction projects I have worked on during my high school career!
+        <p></p>
+    </a></td><td>
+    <a href="myprojects.html" class="thumbnail">
+      <img src="https://imgur.com/M7xpraL.jpg">
+      <div class="caption">
+       Learn about the several construction projects I have worked on during my high school career!
+        <p></p>
+      </a></td><td>
+        <a href="thiswebsite.html" class="thumbnail">
+      <img src="https://imgur.com/9UPglrQ.jpg">
+           <div class="caption">
+       Learn about the several construction projects I have worked on during my high school career!
+        <p></p>
+      </a></td>
+      <td>
+        <a href="mydesignskills.html" class="thumbnail">
+      <img src="https://imgur.com/wlxHBtE.jpg">
+           <div class="caption">
+       Learn about the several construction projects I have worked on during my high school career!
+        <p></p>
+      </a></td></tr>
       </table>
   </div>
 </div>
