--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ tr:nth-child(even) {
       </a></td></tr>
       <tr><td>
 
-    <a href="aboutme.html" class="thumbnail">
-      <img src="https://i.imgur.com/Y8aq3ac.jpg" width="350" height="400">
+    <a href="codingproficiency.html" class="thumbnail">
+      <img src="https://imgur.com/dxBr2AR.jpg" width="350" height="400">
        <div class="caption">
        Learn about the several construction projects I have worked on during my high school career!
         <p></p>
