--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ tr:nth-child(even) {
        Learn about the several construction projects I have worked on during my high school career!
         <p></p>
     </a></td><td>
-    <a href="myprojects.html" class="thumbnail">
-      <img src="https://imgur.com/M7xpraL.jpg">
+    <a href="mymentors.html" class="thumbnail">
+      <img src="https://imgur.com/QekE3Pw.jpg">
       <div class="caption">
        Learn about the several construction projects I have worked on during my high school career!
         <p></p>
