--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ tr:nth-child(even) {
        Learn about the several construction projects I have worked on during my high school career!
         <p></p>
       </a></td><td>
-        <a href="thiswebsite.html" class="thumbnail">
-      <img src="https://imgur.com/9UPglrQ.jpg">
+        <a href="currentproject.html" class="thumbnail">
+      <img src="https://imgur.com/7l1QsKp.jpg">
            <div class="caption">
        Learn about the several construction projects I have worked on during my high school career!
         <p></p>
