--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ tr:nth-child(even) {
         <p></p>
       </a></td>
       <td>
-        <a href="mydesignskills.html" class="thumbnail">
-      <img src="https://imgur.com/wlxHBtE.jpg">
+        <a href="contactme.jpg" class="thumbnail">
+      <img src="https://imgur.com/OWDU5Cq.jpg">
            <div class="caption">
        Learn about the several construction projects I have worked on during my high school career!
         <p></p>
