--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ tr:nth-child(even) {
 }
 </style>
   </head>
-  <body>
+  <body style='font-family=sans-seriff"'>
     <div class="jumbotron">
   <h1>Hi, I'm Teddy Davidson!</h1>
   <p>Applying for the class of 2022!</p>
