--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 </style>
+    <style>
+    * {
+      font-family: sans-serif;
+    }
+</style>
   </head>
   <body style='font-family=sans-seriff"'>
     <div class="jumbotron">
