--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ tr:nth-child(even) {
     <a href="aboutme.html" class="thumbnail">
       <img src="https://i.imgur.com/Y8aq3ac.jpg" width="350" height="400">
        <div class="caption">
-       Learn about the several construction projects I have worked on during my high school career!
+    <h3>   Learn about the several construction projects I have worked on during my high school career!</h3>
         <p></p>
     </a></td><td>
     <a href="myprojects.html" class="thumbnail">
