--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ tr:nth-child(even) {
 </style>
     <style>
     * {
-      font-family: sans-serif;
+      font-family: bookman;
     }
 </style>
   </head>
