--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ tr:nth-child(even) {
 </style>
     <style>
     * {
-      font-family: bookman;
+      font-family: gill-sans;
     }
 </style>
   </head>
-  <body style='font-family=sans-seriff"'>
+  <body style='font-family=gill-sans"'>
     <div class="jumbotron">
   <h1>Hi, I'm Teddy Davidson!</h1>
   <p>Applying for the class of 2022!</p>
