--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@ tr:nth-child(even) {
 </style>
   </head>
   <body style='font-family=gill-sans"'>
+    p.test
+{
+text-outline: 2px 2px #ff0000;
+}
     <div class="jumbotron">
   <h1>Hi, I'm Teddy Davidson!</h1>
   <p>Applying for the class of 2022!</p>
