--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@ pre {
 	font-variant: normal;
 	font-weight: 400;
 	line-height: 23px;
-    }</style>
+    }
+	  p.test
+{
+text-outline: 2px 2px #ff0000;
+}</style>
   </head>
   <body style='font-family=gill-sans"'>
   
