--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ text-outline: 2px 2px #ff0000;
   <body style='font-family=gill-sans"'>
   
     <div class="jumbotron">
-  <h1>Hi, I'm Teddy Davidson!</h1>
+  <p style="font-size: 200%;"><h1>Hi, I'm Teddy Davidson!</h1>
   <p>Applying for the class of 2022!</p>
 </div>
     <div align="center"><table cellpadding="0" width="400" cellspacing="0" class="col-sm-6 col-md-4"><tr><td>
