--- a/index.html
+++ b/index.html
@@ -94,26 +94,26 @@ text-outline: 2px 2px #ff0000;
     <a href="aboutme.html" class="thumbnail">
       <img src="https://i.imgur.com/Y8aq3ac.jpg" width="350" height="400">
        <div class="caption">
-    <h3>   Learn about the several construction projects I have worked on during my high school career!</h3>
+   <div class="jumbotron"> <h3>   Learn about the several construction projects I have worked on during my high school career!</h3> </div>
         <p></p>
     </a></td><td>
     <a href="myprojects.html" class="thumbnail">
       <img src="https://imgur.com/M7xpraL.jpg">
       <div class="caption">
-       <h3>Learn about the several construction projects I have worked on during my high school career!</h3>
+    <div class="jumbotron">   <h3>Learn about the several construction projects I have worked on during my high school career!</h3> </div>
         <p></p>
       </a></td><td>
         <a href="thiswebsite.html" class="thumbnail">
       <img src="https://imgur.com/9UPglrQ.jpg">
            <div class="caption">
-       <h3>Learn about the several construction projects I have worked on during my high school career!</h3>
+    <div class="jumbotron">   <h3>Learn about the several construction projects I have worked on during my high school career!</h3> </div>
         <p></p>
       </a></td>
       <td>
         <a href="mydesignskills.html" class="thumbnail">
       <img src="https://imgur.com/wlxHBtE.jpg">
            <div class="caption">
-      <h3> Learn about the several construction projects I have worked on during my high school career!</h3>
+    <div class="jumbotron">  <h3> Learn about the several construction projects I have worked on during my high school career!</h3> </div> </div>
         <p></p>
       </a></td></tr>
       <tr><td>
@@ -121,26 +121,26 @@ text-outline: 2px 2px #ff0000;
     <a href="codingproficiency.html" class="thumbnail">
       <img src="https://imgur.com/dxBr2AR.jpg" width="350" height="400">
        <div class="caption">
-       <h3>Learn about the several construction projects I have worked on during my high school career!<h3>
+       <div class="jumbotron"><h3>Learn about the several construction projects I have worked on during my high school career!<h3> </div>
         <p></p>
     </a></td><td>
     <a href="mymentors.html" class="thumbnail">
       <img src="https://imgur.com/QekE3Pw.jpg">
       <div class="caption">
-      <h3> Learn about the several construction projects I have worked on during my high school career!<h3>
+   <div class="jumbotron">   <h3> Learn about the several construction projects I have worked on during my high school career!<h3> </div>
         <p></p>
       </a></td><td>
         <a href="currentproject.html" class="thumbnail">
       <img src="https://imgur.com/7l1QsKp.jpg">
            <div class="caption">
-       <h3>Learn about the several construction projects I have worked on during my high school career!<h3>
+    <div class="jumbotron">   <h3>Learn about the several construction projects I have worked on during my high school career!<h3> </div>
         <p></p>
       </a></td>
       <td>
         <a href="contactme.jpg" class="thumbnail">
       <img src="https://imgur.com/OWDU5Cq.jpg">
            <div class="caption">
-       <h3>Learn about the several construction projects I have worked on during my high school career!<h3>
+    <div class="jumbotron">   <h3>Learn about the several construction projects I have worked on during my high school career!<h3> </div>
         <p></p>
       </a></td></tr>
       </table>
