--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style>
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-}
+
 
 td, th {
     border: 1px solid #dddddd;
@@ -70,20 +66,10 @@ blockquote {
 	font-weight: 400;
 	line-height: 23px;
 }
-pre {
-	font-family: "Gill Sans";
-	font-size: 11px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 400;
-	line-height: 23px;
-    }
-	  p.test
-{
-text-outline: 2px 2px #ff0000;
-}</style>
+
+</style>
   </head>
-  <body style='font-family=gill-sans"'>
+  <body>
   
     <div class="jumbotron">
   <p style="font-size: 200%;"><h1>Hi, I'm Teddy Davidson!</h1>
